Fix z-index

--- a/css/edgecreator.css
+++ b/css/edgecreator.css
@@ -363,6 +363,10 @@ img.loading {
 	font-weight: bold;
 }
 
+[id^="dialog-wizard-images"] {
+	z-index: 110 !important;
+}
+
 [id^="dialog-wizard-confirmation"] {
 	z-index: 150 !important;
 }
